// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > TextArea Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<styled.div>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.textarea
    disabled={false}
    fullHeight={true}
    hasError={true}
    id="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    rows={1}
  />
  <styled.div>
    <WarningIcon
      size="medium"
    />
    <Styled(Text)
      hasError={true}
      htmlFor="jest-auto-snapshots String Fixture"
      type="help"
    />
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > TextArea Matches snapshot when boolean prop "fullHeight" is set to: "false" 1`] = `
<styled.div>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.textarea
    disabled={true}
    fullHeight={false}
    hasError={true}
    id="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    rows={1}
  />
  <styled.div>
    <WarningIcon
      size="medium"
    />
    <Styled(Text)
      hasError={true}
      htmlFor="jest-auto-snapshots String Fixture"
      type="help"
    />
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > TextArea Matches snapshot when boolean prop "hasError" is set to: "false" 1`] = `
<styled.div>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.textarea
    disabled={true}
    fullHeight={true}
    hasError={false}
    id="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    rows={1}
  />
</styled.div>
`;

exports[`jest-auto-snapshots > TextArea Matches snapshot when passed all props 1`] = `
<styled.div>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.textarea
    disabled={true}
    fullHeight={true}
    hasError={true}
    id="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    placeholder="jest-auto-snapshots String Fixture"
    rows={1}
  />
  <styled.div>
    <WarningIcon
      size="medium"
    />
    <Styled(Text)
      hasError={true}
      htmlFor="jest-auto-snapshots String Fixture"
      type="help"
    />
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > TextArea Matches snapshot when passed only required props 1`] = `
<styled.div>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.textarea
    disabled={false}
    fullHeight={false}
    hasError={false}
    id="jest-auto-snapshots String Fixture"
    onChange={[MockFunction]}
    rows={4}
  />
</styled.div>
`;
